[project]
name = "mist"
version = "0.2.0"
description = "MIST : Model Intelligence System for Tasks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.167.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth>=2.39.0",
    "mcp[cli]>=1.6.0",
    "nest-asyncio>=1.6.0",
    "pydantic>=2.11.3",
    "pytest>=8.3.5",
    "gitpython>=3.1.41",
]

[tool.setuptools]
packages = ["tools"]
